fixed bens so points overflow issue

--- a/public/stylesheets/profile.scss
+++ b/public/stylesheets/profile.scss
@@ -262,7 +262,7 @@ a[rel] {
         margin-top: 3px;
         .points {
           font-weight:bold;
-          font-size: 9pt;
+          font-size: 8pt;
         }
         .description {
           font-size: 7pt;
